welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:5: error: not found: type int
  var max3:int = nums(1)
           ^